# manipulation-project

./: .gitignore  pyproject.toml  requirements.txt
project_proposal/: project_proposal1.fdb_latexmk  project_proposal1.fls  project_proposal1.tex
src/: bfs.py  bfs_test.py  iiwa_gripper_table.dmd.yaml  iiwa_one_block.ipynb  iiwa_two_block.ipynb  utils.py
