[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Timothy Kostolansky <39891386+tim0120@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pydrake = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
